<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <include
        android:id="@+id/toolbar_detail"
        layout="@layout/toolbar_detail_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_detail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/detail_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title_animal_details"
                style="@style/title_cardview_detalles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/detail_image"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="@string/title_animal_details"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_view_margin"
                android:layout_marginStart="@dimen/vertical_margin"
                app:layout_constraintTop_toBottomOf="@id/title_animal_details"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/detail_sex"
                    style="@style/label_atributo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/label_sex"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/detail_sex"
                    android:layout_marginStart="@dimen/icon_margin"
                    tools:text="sexo"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginStart="@dimen/vertical_margin"
                app:layout_constraintTop_toBottomOf="@id/sex"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/detail_date"
                    style="@style/label_atributo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/label_date"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/detail_date"
                    android:layout_marginStart="@dimen/icon_margin"
                    tools:text="00-00-0000"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/raza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginStart="@dimen/vertical_margin"
                app:layout_constraintTop_toBottomOf="@+id/date"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/detail_raza_"
                    style="@style/label_atributo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/label_raza"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/detail_raza_"
                    android:layout_marginStart="@dimen/icon_margin"
                    tools:text="raza"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tamano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginStart="@dimen/vertical_margin"
                app:layout_constraintTop_toBottomOf="@+id/raza"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/detail_tamano"
                    style="@style/label_atributo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/label_tamano"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/detail_tamano"
                    android:layout_marginStart="@dimen/icon_margin"
                    tools:text="tamaño"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginStart="@dimen/vertical_margin"
                app:layout_constraintTop_toBottomOf="@id/tamano">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@tools:sample/lorem"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>